--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SPA with GitHub API</title> <!-- Title of the SPA -->
-  <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="css/styles.css"> <!-- Link to the external CSS file -->
 </head>
 <body>
   <header>
