Fix script path in index.html and add content to script.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <div id="repo-list"></div> <!-- This div will hold the GitHub repositories fetched from the API -->
   </main>
 
-  <script src="/js/script.js"></script> <!-- Link to the external JavaScript file -->
+  <script src="js/script.js"></script> <!-- Link to the external JavaScript file -->
 </body>
 </html>
