Update HTML files and script to fetch repositories

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><a href="#" id="home">Home</a></li> <!-- Home button -->
-        <li><a href="#" id="github">GitHub</a></li> <!-- GitHub button -->
+        <li><a href="repos.html" id="github">GitHub</a></li>
       </ul>
     </nav>
   </header>
