update homepage and structure

--- a/github.html
+++ b/github.html
@@ -19,15 +19,12 @@
     <a href="contact.html">Contact<span></span></a>
   </nav>
 
-  <main>
-    <h1>Welcome to my portfolio!</h1>
-    <p>This is where your introduction and other details will go.</p>
+  <div class="github-fetch-section">
+    <button id="fetch-github">Fetch GitHub Info</button>
+    <div id="github-data"></div>
+  </div>
 
-    <!-- List to display repos -->
-    <div id="repo-list"></div>
-  </main>
-
-  
+<script src="js/script.js"></script>  
 </body>
 
 </html>
